package edu.austral.ingsis.math;

public interface Function extends Visitable {
  Double solve();
}
