package edu.austral.ingsis.math;

public interface Visitable {
  void accept(Visitor v);
}
